src/component/projects/_projects.scss
@import '../../style/lib/vars.scss';

#projects {
  width: 100%;
  height: 100vh;
  float: left;
  background: $wht-prim;
  padding-top: 8vh;

  h5 {
    float: left;
    width: 95%;
    font-size: 3vw;
    font-family: $font;
    color: $black;
    text-align: left;
    margin-left: 5%;
    margin-top: 4vh;
  }
  section {
    float: left;
    position: relative;
    width: 100%;
    height: 92vh;
    &>div {
      overflow: hidden;
      position: absolute;
      left: 0;
      width: 75%;
      height: 80vh;
      margin-top: 2vh;
      margin-left: 5%;
      background: $black;
      color: $primary;
      cursor: pointer;
      border-radius: 5px;
      transition: margin-top .5s linear 0s,
      left .5s linear 1.050s,
      width 350ms linear 1.850s,
      height 350ms linear 2300ms;

      &>p {
        float: left;
        width: 100%;
        text-align: center;
        font-size: 3vw;
        font-family: $font;
        transition: font-size 350ms linear 1850ms;
        height: 3vh;
        margin-top: 3.5vh;
      }
      &>div {
        opacity: 1;
        transition: opacity 350ms linear 2750ms;
        width: 90%;
        margin-left: 5%;
        margin-top: 2vh;
        float: left;
        overflow-x: scroll;
        height: 70vh;
        &>p {
          width: 80%;
          margin-left: 10%;
          float: left;
          font-size: 1.5vw;
          font-family: $font;
          margin-top: 2vh;
          text-align: center;
          line-height: 3.5vh;
        }
        pre {
          margin-top: 2vh;
          float: left;
          width: 95%;
          padding: 2vh 2.5%;

          * {
            font-size: 1.25vw;
          }
        }
      }
    }


    @for $i from 1 to 5 {
      .hidden:nth-child(#{$i}) {
        margin-top: (12vh * $i) + $i;
        height: 10vh;
        left: 77.5%;
        width: 15%;
        overflow: hidden;
        transition: height 350ms linear 350ms,
        width 350ms linear 700ms,
        margin-top .5s linear 1050ms,
        left .5s linear 1550ms;
        &>:hover {
          animation-name: divpulse;
          animation-duration: 1s;
          animation-iteration-count: infinite;
        }

        &>p {
          font-size: 2vw;
          transition: font-size 350ms linear 0ms;
        }
        &>div {
          opacity: 0;
          transition: opacity 350ms linear 0ms;
        }
      }
    }

  }
}

@media (max-width:560px) {
  #projects {
    &>h5 {
      font-size: 5vw;
    }
    @for $i from 1 to 5 {
      &>section>.hidden:nth-child(#{$i}) {
        height: 7vh !important;
        margin-top: (8vh * $i) + 2vh;
        &>p {
          font-size: 2.5vw !important;
          height: 2.5vh;
          margin-top: 2.5vh;
        }
      }
    }
    &>section {
      &>div>p {
        font-size: 5vw;
      }
      &>div>div>p {
        width: 100%;
        margin-left: 0;
        font-size: 3vw;
        line-height: 2vh;
      }
      &>div>div {
        pre * {
          font-size: 2.5vw;
          line-height: 2vh;
        }
      }
    }
  }
}

@keyframes divpulse {
  0% {
    color: $primary;
  }

  50% {
    color: $wht-prim;
  }

  100% {
    color: $primary;
  }
}

